2007-02-16  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/doc/cmd_*.dox: freshened the documentation of the basic
	yarp programs (yarp, yarpdev, yarpview).

2007-02-15  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/NameServer.h: add a new "yarp name
	gc" command.  This does garbage collection for port names.  Every
	port for which "yarp exists /portname" returns false gets removed.
	This will clean up port information registered by processes which
	were interrupted without unregistering those ports.

2007-02-14  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/port_power, src/doc/port_expert.dox: extend
	tutorial material

	* src/libYARP_OS/include/yarp/Companion.h: added a new
	"yarp wait /portname" command.  Replicates the functionality
	Assif Mirza has been implementing with a bash script.  This
	command waits until "yarp exists /portname" is true.  It is
	currently implemented using polling.

2007-02-13  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/CMakeLists.txt: Conditional for MINGW added
	for Java, based on feedback from Nelson Goncalves.  Not sure
	if it works, but should do no harm and it alerts the user to 
	the issue: passing "--add-stdcall-alias" to the linker.

2007-02-13  Giorgio Metta  <pasa@liralab.it>

	* example/gtkmm: example glade application "hello world"-like
	completed and CMakeLists files updated for Windows/Linux.

2007-02-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/include/yarp/dev/DeviceGroup.h: new device
	called "group" that lets you start a list of devices as a group.
	There may be cross-references between the devices.  See
	src/libYARP_dev/harness/group_basic.ini for a (fairly trivial)
	example.

	* conf/FindGtkMM.cmake: added basic unix support (via pkgconfig)

2007-02-09  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: wrong header file order.

	* src/libYARP_OS/include/yarp/os/Bottle.h: give public
	access to binary form of bottles.
