@@ -1,3 +1,8 @@
+2007-02-17  Alexandre Bernardino  <alex@isr.ist.utl.pt>
+
+        *conf/FindAce.cmake: Added specific rules for linking with MinGW:
+        -lwinmm -lwsock32
+
 2007-02-16  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/doc/cmd_*.dox: freshened the documentation of the basic
